--- a/Source/Code/CorePlugin/CorePlugin.csproj
+++ b/Source/Code/CorePlugin/CorePlugin.csproj
@@ -18,7 +18,7 @@
     <ProjectGuid>{AFE883F3-72B4-4C7C-A1D1-44EDC09C8F6E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GameTest2</RootNamespace>
+    <RootNamespace>NebraskaGameDev</RootNamespace>
     <AssemblyName>GamePlugin.core</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -57,15 +57,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CannonBall.cs" />
+    <Compile Include="Cannonball.cs" />
     <Compile Include="CorePlugin.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="Pirate.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="SimplePlayer.cs" />
     <Compile Include="Spawner.cs" />
+    <Compile Include="YourCustomComponentType.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <PropertyGroup>
